Create templates/diary file in diary file and day_list.html

--- a/projects/diary/templates/diary/base.html
+++ b/projects/diary/templates/diary/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatiable" content="IE=edge" />
     <meta name="viewport content=width=device-width, initial-scale=1.0" />
-    <title>{% block title %}{% endblock %}</title>
+    <title>日記アプリ</title>
     <link rel="stylesheet" href="style.css" />
     {% block extrajas %} {% endblock %}
   </head>
