--- a/projects/diary/templates/diary/day_form.html
+++ b/projects/diary/templates/diary/day_form.html
@@ -1,5 +1,7 @@
 {% extends 'diary/base.html' %} {% block content %}
 <form action="" method="POST">
   {{form.as_p}}
-  <button type="submit"></button>
+  <button type="submit">送信</button>
+  {% csrf_token %}
 </form>
+{% endblock %}
