--- a/projects/diary/templates/diary/base.html
+++ b/projects/diary/templates/diary/base.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatiable" content="IE=edge" />
     <meta name="viewport content=width=device-width, initial-scale=1.0" />
     <title>日記アプリ</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="style.css" />
     {% block extrajas %} {% endblock %}
   </head>
