--- a/projects/diary/templates/diary/base.html
+++ b/projects/diary/templates/diary/base.html
@@ -16,10 +16,12 @@
     {% block extrajas %} {% endblock %}
   </head>
   <body>
+    <div class="container"
     <nav class="nav">
       <a class="nav-link active" href="{% url 'diary:index'%}">一覧</a>
       <a class="nav-link" href="{% url 'diary:add'%}">追加</a>
     </nav>
     {% block content %} {% endblock %} {% block extrajas %} {% endblock %}
+    </div>
   </body>
 </html>
