--- a/projects/diary/templates/diary/day_list.html
+++ b/projects/diary/templates/diary/day_list.html
@@ -1,5 +1,16 @@
 {% extends 'diary/base.html' %} {% block content %}
-<h1>日記アプリです</h1>
-{% for day in day_list %}
-<h2>{{day.title}}</h2>
+<h1>日記一覧</h1>
+<table class="table">
+  <caption>
+    日記一覧
+  </caption>
+  <thead>
+    <tr>
+      <th>タイトル</th>
+      <th>日付</th>
+    </tr>
+  </thead>
+  {% for day in day_list %}
+  <h2>{{day.title}}</h2>
+</table>
 {% endfor %} {% endblock %}
