--- a/projects/diary/templates/diary/day_list.html
+++ b/projects/diary/templates/diary/day_list.html
@@ -10,7 +10,13 @@
       <th>日付</th>
     </tr>
   </thead>
-  {% for day in day_list %}
-  <h2>{{day.title}}</h2>
+  <tbody>
+    {% for day in day_list %}
+    <tr>
+      <td>{{day.title}}</td>
+      <td>{{day.date}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
 </table>
-{% endfor %} {% endblock %}
+{% endblock %}
