Create day_confirm_delete.html in your template/diary file

--- a/projects/diary/templates/diary/day_confirm_delete.html
+++ b/projects/diary/templates/diary/day_confirm_delete.html
@@ -6,15 +6,15 @@
     </caption>
     <tr>
       <th>タイトル</th>
-      <td>{{form.title}}</td>
+      <td>{{day.title}}</td>
     </tr>
     <tr>
       <th>本文</th>
-      <td>{{form.text}}</td>
+      <td>{{day.text}}</td>
     </tr>
     <tr>
       <th>日付</th>
-      {{form.date}}
+      <td>{{day.date}}</td>
     </tr>
   </table>
   <button type="submit" class="btn btn-primary">送信</button>
