--- a/projects/diary/templates/diary/day_form.html
+++ b/projects/diary/templates/diary/day_form.html
@@ -14,7 +14,7 @@
     </tr>
     <tr>
       <th>日付</th>
-      {{form.date}}
+      <td>{{form.date}}</td>
     </tr>
   </table>
   <button type="submit" class="btn btn-primary">送信</button>
