--- a/projects/diary/templates/diary/day_confirm_delete.html
+++ b/projects/diary/templates/diary/day_confirm_delete.html
@@ -17,6 +17,7 @@
       <td>{{day.date}}</td>
     </tr>
   </table>
+  <p>こちらのデータを削除します</p>
   <button type="submit" class="btn btn-primary">送信</button>
   {% csrf_token %}
 </form>
