Create day_detail.html in your template/diary file

--- a/projects/diary/templates/diary/day_detail.html
+++ b/projects/diary/templates/diary/day_detail.html
@@ -10,7 +10,7 @@
   </tr>
   <tr>
     <th>本文</th>
-    <td>{{day.text}}</td>
+    <td>{{day.text | linebreaksbr }}</td>
   </tr>
   <tr>
     <th>日付</th>
